--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -5,8 +5,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""/></a>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <div class="search-bar-till-md">
-          <input class="search-area" type="text" placeholder="Tìm kiếm..."/>
-          <button class="btn search-btn"><i class="fas fa-search"></i></button>
+          <input class="search-area" type="text" placeholder="Tìm kiếm..."/><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
         </div>
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a></li>
@@ -20,8 +19,7 @@
         <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
       </div>
       <div class="search-bar hidden-till-md">
-        <input class="search-area" type="text" placeholder="Tìm kiếm..."/>
-        <button class="btn search-btn"><i class="fas fa-search"></i></button>
+        <input class="search-area" type="text" placeholder="Tìm kiếm..."/><a class="btn search-btn" href="#search-result.html"><i class="fas fa-search"></i></a>
         <button class="btn search-cancel d-flex align-items-center justify-content-center" onclick="searchBarToggler()"><i class="fas fa-times"></i></button>
       </div>
     </div>
