--- a/halo/review.html
+++ b/halo/review.html
@@ -19,8 +19,7 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
-              <input class="search-area" type="text" placeholder="Tìm kiếm...">
-              <button class="btn search-btn"><i class="fas fa-search"></i></button>
+              <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
             </div>
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a></li>
@@ -34,8 +33,7 @@
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
-            <input class="search-area" type="text" placeholder="Tìm kiếm...">
-            <button class="btn search-btn"><i class="fas fa-search"></i></button>
+            <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="#search-result.html"><i class="fas fa-search"></i></a>
             <button class="btn search-cancel d-flex align-items-center justify-content-center" onclick="searchBarToggler()"><i class="fas fa-times"></i></button>
           </div>
         </div>
@@ -106,22 +104,28 @@
         <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
       </section>
       <section class="main-area container-xl">
-        <div class="review__post-area"><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
-            <div class="review__post--content"> 
-              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
-              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
-              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
-            <div class="review__post--content"> 
-              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
-              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
-              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
-            <div class="review__post--content"> 
-              <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
-              <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
-              <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a>
+        <div class="review__post-area">
+          <div class="review__post-collection"><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+              <div class="review__post--content"> 
+                <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+                <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+                <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+              <div class="review__post--content"> 
+                <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+                <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+                <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-img.png" alt="">
+              <div class="review__post--content"> 
+                <h1 class="post__header text-left">Top 5 DSLR đáng mua năm 2021</h1>
+                <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
+                <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
+              </div></a></div>
+          <div class="loading-indicator justify-content-center mb-5">
+            <div class="spinner-grow text-dark"></div>
+            <div class="spinner-grow text-dark mx-3"></div>
+            <div class="spinner-grow text-dark"></div>
+          </div>
           <button class="btn seemore-btn btn--dark">Xem thêm</button>
         </div>
         <aside class="review__aside-area hidden-till-md">
