--- a/halo/payment.html
+++ b/halo/payment.html
@@ -35,7 +35,7 @@
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
-            <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="#search-result.html"><i class="fas fa-search"></i></a>
+            <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
             <button class="btn search-cancel d-flex align-items-center justify-content-center" onclick="searchBarToggler()"><i class="fas fa-times"></i></button>
           </div>
         </div>
