--- a/halo/search-result.html
+++ b/halo/search-result.html
@@ -34,7 +34,7 @@
             <button class="btn search-btn hidden-till-md d-flex align-items-center" onclick="searchBarToggler()"><i class="fas fa-search"></i></button>
           </div>
           <div class="search-bar hidden-till-md">
-            <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
+            <input class="search-area search-area-full" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
             <button class="btn search-cancel d-flex align-items-center justify-content-center" onclick="searchBarToggler()"><i class="fas fa-times"></i></button>
           </div>
         </div>
@@ -80,8 +80,11 @@
             </div>
           </div>
         </div>
-      </div><img class="search__banner w-100" src="img/img--dslr-hub/dslr-banner-min.png" alt="">
-      <h1 class="search__header">Kết quả tìm kiếm cho</h1>
+      </div>
+      <img class="search__banner w-100" src="img/img--dslr-hub/dslr-banner-min.png" alt="">
+      <h1 class="search__header">
+        <span class="search__result">Tìm thấy 0</span>
+      </h1>
     </main>
     <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
