--- a/halo/search-result.html
+++ b/halo/search-result.html
@@ -81,10 +81,37 @@
           </div>
         </div>
       </div>
-      <img class="search__banner w-100" src="img/img--dslr-hub/dslr-banner-min.png" alt="">
-      <h1 class="search__header">
-        <span class="search__result">Tìm thấy 0</span>
-      </h1>
+      <div class="search__banner w-100"><img class="search__logo" src="img/img--misc/logo-white.png" alt=""></div>
+      <section class="page-wrapper container-xl"> 
+        <div class="result-item-area"> 
+          <h1 class="search__header w-100">
+             Tìm thấy&nbsp;<span class="search__result">3</span>&nbsp;kết quả cho:&nbsp;<span class="search__result">5D</span></h1>
+          <div class="card item"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="">
+            <div class="card-body text-center">
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-text price font-weight-bold">50.090.000đ</p>
+              <p class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+            </div>
+          </div>
+          <div class="card item"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="">
+            <div class="card-body text-center">
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-text price font-weight-bold">50.090.000đ</p>
+              <p class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+            </div>
+          </div>
+          <div class="card item"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="">
+            <div class="card-body text-center">
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-text price font-weight-bold">50.090.000đ</p>
+              <p class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+            </div>
+          </div>
+        </div>
+        <div class="promo-area hidden-till-md">
+          <h1 class="promo-header">Khuyến mại HOT</h1><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt="">
+        </div>
+      </section>
     </main>
     <footer class="dark-side" id="footer"> 
       <div class="container px-sm-5 mw-600 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
