--- a/halo/details.html
+++ b/halo/details.html
@@ -142,7 +142,7 @@
             </ul>
           </div>
           <button class="offers__btn btn">Đăng ký mua trả góp lãi suất 0%</button>
-          <p class="offers__contact">Tư vấn miền Bắc: 0397496263 (Mr. Nguyễn) <br>Tư vấn miền Trung: 0397496263 (Mr. Trung)  <br>Tư vấn miền Nam: 0397496263 (Mr. Đức)  </p>
+          <p class="offers__contact">Tư vấn miền Bắc: <a class="text-primary" href="#">0397496263 </a>(Mr. Nguyễn) <br>Tư vấn miền Trung: <a class="text-primary" href="#">0397496263 </a>(Mr. Trung)    <br>Tư vấn miền Nam: <a class="text-primary" href="#">0397496263 </a>(Mr. Đức)    </p>
         </section>
         <section class="details__main-info">
           <div class="main-info__toggler" data-toggle="collapse" data-target="#intro"><span class="details__sub-header">Giới thiệu</span><span class="main-info__toggler-indicator"><i class="fas fa-chevron-up"></i></span></div>
@@ -339,11 +339,11 @@
                 <p class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="">
+            <div class="card item"><img class="card-img-top" src="img/img--item/item-2.jpg" alt="">
               <div class="card-body text-center">
-                <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
-                <p class="card-text price font-weight-bold">50.090.000đ</p>
-                <p class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+                <p class="card-text price font-weight-bold">10.290.000đ</p>
+                <p class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
               </div>
             </div>
           </div>
