--- a/halo/payment.html
+++ b/halo/payment.html
@@ -15,6 +15,25 @@
     <title>Cổng thanh toán</title>
   </head>
   <body>
+    <!-- Load Facebook SDK for JavaScript-->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function() {
+      FB.init({
+      xfbml            : true,
+      version          : 'v10.0'
+      });
+      };
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!-- Your Chat Plugin code-->
+    <div class="fb-customerchat" attribution="setup_tool" page_id="103550388473714" theme_color="#6699cc" logged_in_greeting="Xin chào, HALO có thể giúp gì cho bạn?" logged_out_greeting="Xin chào, HALO có thể giúp gì cho bạn?"></div>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
@@ -257,7 +276,7 @@
                   <div class="method__toggler" data-toggle="collapse" data-target="#cod"> 
                     <input type="radio" name="payment-method" id="cod-radio" form="methods-selection">
                     <label for="cod-radio">Thanh toán khi nhận hàng (COD)</label>
-                  </div><a class="method__content collapse btn btn--confirmation payment__toggler" id="cod" href="#" data-parent="#methods-selection">Xác nhận</a>
+                  </div><a class="method__content collapse btn btn--confirmation payment__toggler" id="cod" href="checkout.html" data-parent="#methods-selection">Xác nhận</a>
                 </div>
               </form>
             </div>
