--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -60,6 +60,9 @@
       </nav>
     </header>
     <main>
+      <div class="utilities-btn-group"> 
+        <div class="scroll-up-btn"><a class="scroll-up-btn__link" href="#"> <i class="fas fa-chevron-up"></i></a></div>
+      </div>
       <div class="modal fade" id="logreg">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content"> 
