--- a/halo/payment.html
+++ b/halo/payment.html
@@ -62,7 +62,7 @@
     </header>
     <main>
       <div class="utilities-btn-group"> 
-        <div class="scroll-up-btn"><a class="scroll-up-btn__link" href="#"> <i class="fas fa-chevron-up"></i></a></div>
+        <div class="scroll-up-btn"><a class="scroll-up-btn__link" href="#collapsibleNavbar"> <i class="fas fa-chevron-up"></i></a></div>
       </div>
       <div class="modal fade" id="logreg">
         <div class="modal-dialog modal-dialog-centered">
