--- a/halo/parts/header.html
+++ b/halo/parts/header.html
@@ -1,5 +1,5 @@
 
-<header>
+<header id="header">
   <nav class="navbar navbar-expand-md navbar-dark">
     <div class="container-xl px-4 px-sm-5 px-xl-0">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""/></a>
