--- a/halo/parts/layout.html
+++ b/halo/parts/layout.html
@@ -31,7 +31,7 @@
     </script>
     <!-- Your Chat Plugin code-->
     <div class="fb-customerchat" attribution="setup_tool" page_id="103550388473714" theme_color="#6699cc" logged_in_greeting="Xin chào, HALO có thể giúp gì cho bạn?" logged_out_greeting="Xin chào, HALO có thể giúp gì cho bạn?"></div>
-    <header>
+    <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
@@ -59,7 +59,7 @@
     </header>
     <main>
       <div class="utilities-btn-group"> 
-        <div class="scroll-up-btn"><a class="scroll-up-btn__link" href="#collapsibleNavbar"> <i class="fas fa-chevron-up"></i></a></div>
+        <div class="scroll-up-btn"><a class="scroll-up-btn__link" href="#header"> <i class="fas fa-chevron-up"></i></a></div>
       </div>
       <div class="modal fade" id="logreg">
         <div class="modal-dialog modal-dialog-centered">
