--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="css/camera-hub.css">
@@ -112,11 +113,11 @@
       </section>
       <section class="portal hidden-till-md">
         <div class="portal__bg hidden-till-md">
-          <div class="portal__bg--green"></div>
-          <div class="portal__bg--pink"></div>
+          <div class="portal__bg--green dslr-half"></div>
+          <div class="portal__bg--pink mrl-half"></div>
         </div>
         <div class="portal__body container-xl d-flex">
-          <div class="banner-full banner-full--dslr d-flex w-50"><img class="banner-full__img" src="img/img--camera-hub/portal-dslr-v1.png" alt="">
+          <div class="banner-full banner-full--dslr dslr-half d-flex w-50" data-aos="fade-right" data-aos-duration="900" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="banner-full__img" src="img/img--camera-hub/portal-dslr-v1.png" alt="">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold">
                 <p class="banner-full__text banner-full__text--dslr">CHUYÊN NGHIỆP</p>
@@ -125,7 +126,7 @@
               </div><a class="btn btn--dark banner-full__btn banner-full__btn--dslr" href="dslr-hub.html">Xem tất cả DSLR</a>
             </div>
           </div>
-          <div class="banner-full banner-full--mrl d-flex w-50">
+          <div class="banner-full banner-full--mrl mrl-half d-flex w-50" data-aos="fade-left" data-aos-duration="900" data-aos-easing="ease-in-sine">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold"> 
                 <p class="banner-full__text banner-full__text--mrl text-light">TRẺ TRUNG</p>
@@ -174,7 +175,7 @@
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a><img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-1.jpg" alt="">
+        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-1.jpg" alt=""></a>
       </section>
       <section class="hub-row hub-row--hot container-xl">
         <h1 class="section__header">BÁN CHẠY</h1>
@@ -214,7 +215,7 @@
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a><img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-2.jpg" alt="">
+        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-2.jpg" alt=""></a>
       </section>
       <section class="hub-row hub-row--love container-xl">
         <h1 class="section__header">ĐÁNH GIÁ TỐT</h1>
@@ -254,7 +255,7 @@
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="#">Xem toàn bộ </a><img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-3.jpg" alt="">
+        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-3.jpg" alt=""></a>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
@@ -273,6 +274,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
