--- a/halo/dslr-hub.html
+++ b/halo/dslr-hub.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dslr-hub.css">
     <title>Máy ảnh DSLR</title>
@@ -90,7 +91,11 @@
           <li class="breadcrumb-item"><a href="camera-hub.html">Máy ảnh</a></li>
           <li class="breadcrumb-item active">Máy ảnh DSLR</li>
         </ul>
-      </div><img class="dslr-hub__banner w-100" src="img/img--dslr-hub/dslr-banner-min.png" alt="">
+      </div>
+      <div class="dslr-hub__banner w-100">
+        <h1>DSLR </h1>
+        <p>SÁNG TẠO KHÔNG GIỚI HẠN    </p>
+      </div>
       <div class="dslr-hub__display-area container-xl">
         <aside class="dslr-hub__aside-area">
           <div class="technical-filter--min display-till-md">
@@ -259,6 +264,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
