--- a/halo/index.html
+++ b/halo/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/index.css">
     <title>HALO</title>
@@ -174,63 +175,63 @@
       <section class="intro intro--camera">
         <div class="container-xl px-sm-5 px-xl-0">
           <div class="row">
-            <div class="intro__text d-flex flex-column justify-content-center col-md">
+            <div class="intro__text d-flex flex-column justify-content-center col-md" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="200">
               <h1>Máy ảnh DSLR/Mirrorless</h1>
               <h3 class="font-italic">
                  Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3><a class="btn btn--dark seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
-            <div class="intro__img col-md"><img src="img/img--camera-body/camera-intro-imgv2.png" alt=""></div>
+            <div class="intro__img col-md" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="200"><img src="img/img--camera-body/camera-intro-imgv2.png" alt=""></div>
           </div>
         </div>
       </section>
       <section class="intro intro--lens dark-side">
         <div class="container-xl px-sm-5 px-xl-0">
           <div class="row">
-            <div class="intro__text d-flex flex-column justify-content-center col-md">
+            <div class="intro__text d-flex flex-column justify-content-center col-md" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="250">
               <h1>Ống kính máy ảnh</h1>
               <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3><a class="btn btn--light seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
-            <div class="intro__img col-md"><img src="img/img--lens/lens-intro-imgv2.png" alt=""></div>
+            <div class="intro__img col-md" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="250"><img src="img/img--lens/lens-intro-imgv2.png" alt=""></div>
           </div>
         </div>
       </section>
       <section class="intro intro--equip">
         <div class="container-xl px-sm-5 px-xl-0 mw-900">
-          <div class="intro__text d-flex flex-column">
+          <div class="intro__text d-flex flex-column" data-aos="fade-down" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="300">
             <h1>Phụ kiện máy ảnh</h1>
             <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3>
           </div>
           <div class="intro__img display-till-md"><img src="img/img--equip/equip-intro--min.png" alt=""></div>
-          <div class="intro__img card-columns hidden-till-md">
+          <div class="intro__img card-columns hidden-till-md" id="intro__img" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="300">
             <div class="card"><img class="card-img" src="img/img--equip/equip-1.png" alt=""></div>
             <div class="card"><img class="card-img" src="img/img--equip/equip-5.png" alt=""></div>
             <div class="card"><img class="card-img" src="img/img--equip/equip-3.jpg" alt=""></div>
             <div class="card"><img class="card-img" src="img/img--equip/equip-4.png" alt=""></div>
-          </div><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html">Xem chi tiết</a>
+          </div><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html" data-aos-anchor="#intro__img" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-sine">Xem chi tiết</a>
         </div>
       </section>
       <section class="specials dark-side">
         <div class="container-xl px-sm-5 px-xl-0 d-flex flex-column align-items-center">
-          <h1>Đối tác chiến lược</h1>
-          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt=""></div>
+          <h1 data-aos="zoom-out" data-aos-duration="1200" data-aos-easing="ease-in-sine" data-aos-offset="300">Đối tác chiến lược</h1>
+          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt="" data-aos="flip-left" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt="" data-aos="flip-left" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt="" data-aos="flip-left" data-aos-duration="1300" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt="" data-aos="flip-left" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="500"></div>
           <div class="brands__text">
             <h3 class="font-italic text-center mw-900">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
           <h1>Chính sách độc quyền</h1>
           <div class="policy d-flex justify-content-between">
-            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-duration="500" data-aos-easing="ease-in-sine" data-aos-offset="500">
               <p class="policy__text text-center"><span class="font-weight-bold">Miễn phí </span>vận chuyển nội thành Hà Nội<br>(riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-truck"></i>
                 <p class="font-weight-bold">FREE</p>
               </div>
             </div>
-            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-duration="900" data-aos-easing="ease-in-sine" data-aos-offset="500">
               <p class="policy__text text-center">Đổi mới sản phẩm hoặc<span class="font-weight-bold"> hoàn tiền 100% </span>giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="fas fa-history"></i>
                 <p class="font-weight-bold">100%</p>
               </div>
             </div>
-            <div class="policy__item border border-white d-flex flex-column justify-content-between">
+            <div class="policy__item border border-white d-flex flex-column justify-content-between" data-aos="fade-down" data-aos-duration="1500" data-aos-easing="ease-in-sine" data-aos-offset="500">
               <p class="policy__text text-center">Hỗ trợ trả góp mọi sản phẩm với <span class="font-weight-bold">0% lãi suất </span><br>Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử</p>
               <div class="policy__icon d-flex justify-content-center align-items-center"><i class="far fa-credit-card"></i>
                 <p class="font-weight-bold">0%  </p>
@@ -242,13 +243,13 @@
       <section class="promo">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>Tin khuyến mại</h1>
-          <div class="promo__collection row"><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""></div>
+          <div class="promo__collection row" data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-offset="200"><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item col-md-4" src="img/img--misc/promo-img-1.jpg" alt=""></div>
           <button class="btn btn--dark seemore-btn mx-auto" type="button">Xem thêm</button>
         </div>
       </section>
       <section class="review dark-side">
         <div class="container-xl px-sm-5 mw-900">
-          <h1>HALO review</h1><a class="review-item d-flex" href="review.html"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+          <h1>HALO review</h1><a class="review-item d-flex" href="review.html" data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
             <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
                 <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
@@ -256,7 +257,7 @@
                 <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-2"></i>01/01/2021</p>
               </div>
               <p class="review-preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review-item d-flex" href="review.html"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+            </div></a><a class="review-item d-flex" href="review.html" data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
             <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
                 <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
@@ -267,16 +268,14 @@
             </div></a><a class="btn btn--light seemore-btn mx-auto" href="review.html">Xem thêm        </a>
         </div>
       </section>
-      <section class="connection">
-        <div class="container-xl px-sm-5 px-xl-0">
-          <h1 class="connection__header">Đăng ký để nhận tin mới nhất từ HALO</h1>
-          <form class="connection__form d-flex justify-content-center" action="">
-            <input class="connection__input" type="text" placeholder="Email của bạn...">
-            <button class="btn connection__submit-btn btn-primary font-italic">Gửi</button>
-          </form>
-          <p class="connection__text text-center">Hoặc theo dõi chúng tôi tại</p>
-          <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img class="h-100" src="img/img--misc/social-twitter.png" alt=""></a></div>
-        </div>
+      <section class="connection" data-aos="zoom-in" data-aos-duration="1000" data-aos-easing="ease-in-sine" data-aos-offset="200">
+        <h1 class="connection__header">Đăng ký để nhận tin mới nhất từ HALO</h1>
+        <form class="connection__form d-flex justify-content-center" action="">
+          <input class="connection__input" type="text" placeholder="Email của bạn...">
+          <button class="btn connection__submit-btn btn-primary font-italic">Gửi</button>
+        </form>
+        <p class="connection__text text-center">Hoặc theo dõi chúng tôi tại</p>
+        <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img class="h-100" src="img/img--misc/social-twitter.png" alt=""></a></div>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
@@ -295,6 +294,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
