--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -117,7 +117,7 @@
           <div class="portal__bg--pink mrl-half"></div>
         </div>
         <div class="portal__body container-xl d-flex">
-          <div class="banner-full banner-full--dslr dslr-half d-flex w-50" data-aos="fade-right" data-aos-duration="900" data-aos-easing="ease-in-sine" data-aos-offset="500"><img class="banner-full__img" src="img/img--camera-hub/portal-dslr-v1.png" alt="">
+          <div class="banner-full banner-full--dslr dslr-half d-flex w-50"><img class="banner-full__img" src="img/img--camera-hub/portal-dslr-v1.png" alt="">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold">
                 <p class="banner-full__text banner-full__text--dslr">CHUYÊN NGHIỆP</p>
@@ -126,7 +126,7 @@
               </div><a class="btn btn--dark banner-full__btn banner-full__btn--dslr" href="dslr-hub.html">Xem tất cả DSLR</a>
             </div>
           </div>
-          <div class="banner-full banner-full--mrl mrl-half d-flex w-50" data-aos="fade-left" data-aos-duration="900" data-aos-easing="ease-in-sine">
+          <div class="banner-full banner-full--mrl mrl-half d-flex w-50">
             <div class="banner-full__text-area align-self-center">
               <div class="banner-full__text-only font-weight-bold"> 
                 <p class="banner-full__text banner-full__text--mrl text-light">TRẺ TRUNG</p>
@@ -274,7 +274,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
