--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -1,5 +1,5 @@
 
-<div class="carousel slide" id="main-carousel" data-ride="carousel" data-interval="3500" data-touch="true">
+<div class="carousel slide" id="main-carousel" data-ride="carousel" data-interval="false" data-touch="true">
   <!--indicators: 3 nút định vị trang-->
   <ul class="carousel-indicators">
     <li class="active" data-target="#main-carousel" data-slide-to="0"></li>
