--- a/halo/index.html
+++ b/halo/index.html
@@ -268,7 +268,7 @@
             </div></a><a class="btn btn--light seemore-btn mx-auto" href="review.html">Xem thêm        </a>
         </div>
       </section>
-      <section class="connection">
+      <section class="connection container-xl">
         <h1 class="connection__header">Đăng ký để nhận tin mới nhất từ HALO</h1>
         <form class="connection__form d-flex justify-content-center" action="">
           <input class="connection__input" type="text" placeholder="Email của bạn...">
@@ -294,6 +294,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
