--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -58,8 +58,8 @@
             <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-3.png" alt=""/></div>
           </div>
           <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
-          <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ ở gần đến vậy</p>
-          <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ GẦN ĐẾN VẬY</p>
+          <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ đơn giản đến vậy</p>
+          <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ ĐƠN GIẢN  ĐẾN VẬY</p>
           <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
         </div>
         <div class="carousel-caption__img"></div>
