--- a/halo/index.html
+++ b/halo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/halo/favicon.ico">
+    <link rel="shortcut icon" href="/halo/favicon/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -151,7 +151,7 @@
               <div class="carousel-caption__img"></div>
             </div>
           </div>
-          <div class="carousel-item banner-3 container-fluid p-0"><img class="outer-ring hidden-till-md" src="img/img--carousel/outer-ring-min.png" alt=""><img class="inner-ring hidden-till-md" src="img/img--carousel/outer-ring-min.png" alt="">
+          <div class="carousel-item banner-3 container-fluid p-0"><img class="outer-ring hidden-till-md" src="img/img--carousel/outer-ring-min.png" alt=""><img class="inner-ring hidden-till-md" src="img/img--carousel/ring-v5.png" alt="">
             <div class="carousel-caption container-xl pb-0 px-0 px-md-5 px-xl-0">
               <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
               <div class="carousel-caption__text">
